modified:   app.py - updated to use dict for jinja2 rendering 	modified:   static/css/stylesheet.css - updated stop_name spacing 	modified:   templates/busstop.html - removed date and time div and added to index 	modified:   templates/errors/404.html - updated home to index 	modified:   templates/errors/500.html - updated home to index 	templates/index.html

--- a/flask_app/static/css/stylesheet.css
+++ b/flask_app/static/css/stylesheet.css
@@ -50,7 +50,7 @@ a {
     text-align: center;
     width: 680px;
     margin-top: 10px;
-    margin-bottom: 10px;
+    margin-bottom: 20px;
 }
 #date_and_time, #no_info {
     display: inline-block;
